--- a/package.json
+++ b/package.json
@@ -8,7 +8,5 @@
     },
     "devDependencies": {},
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "license": "ISC"
-  }
+        "start": "node index.js"
+    }
