--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-    "name": "sboxe",
-    "version": "0.0.1",
-    "description": "",
-    "main": "index.js",
-    "dependencies": {
-        "discord.js": "^12.2.0"
-    },
-    "devDependencies": {},
-    "scripts": {
-        "start": "node index.js"
-    }
+  "name": "sboxe",
+  "version": "0.0.1",
+  "description": "",
+  "main": "index.js",
+  "dependencies": {
+    "discord.js": "^12.2.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "license": "ISC"
 }
